# WaveFunctionCollapseSFML

./: CMakeLists.txt  Makefile
src/: config.cc  main.cc  renderer.cc  tiles.cc  world.cc
src/include/: config.hpp  renderer.hpp  tiles.hpp  world.hpp
